weird fixe for iOS user, gap is wider so they cant trigger the scrollBy bugged function

--- a/components/Card/component.module.css
+++ b/components/Card/component.module.css
@@ -1,18 +1,4 @@
 .card {
-    /* position: relative;
-    
-    height: 60%;
-    aspect-ratio: 2/3;
-    
-
-    border: 1px solid rgba(255, 255, 255, 1);
-    border-radius: 16px;
-
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    background: rgba(255, 255, 255, 0.25);    
-    
-    transition: all 1s;
-    transform-style: preserve-3d; */
     position: relative;
     
     height: 60%;
@@ -35,7 +21,7 @@
 }
 
 .cardClosing {
-    animation: cardClosing 750ms ease-in-out forwards;
+    animation: cardClosing 1s ease-in-out forwards;
 }
 
 @media (min-width: 850px) {
@@ -63,7 +49,7 @@
     0% {
         transform: rotateY(0);
     }
-    35% {
+    50% {
         transform: rotateY(180deg);
         min-width: 65vw;
          height: 60%;
@@ -77,39 +63,31 @@
          min-width: 100vw ;
          height: 100%;
     }
-    /* from {
-        transform: rotateY(0);
-         min-width: 65vw;
-         height: 60%;
-         border-radius: 16px;
-         border: 2px solid white;
-    }
-    to {
-        transform: rotateY(180deg);
-         border-radius: 0;
-         border: 0;
-         min-width: 100vw ;
-         height: 100%;
-     } */
 }
 
  @keyframes cardClosing {
-    from {
+    0%{
         transform: rotateY(180deg);
         border-radius: 0;
         border: 0;
         min-width: 100vw ;
         height: 100%; 
     }
-    to {
-        /* double rotation */
-        transform: rotateY(360deg);
-         min-width: 65vw;
+    20%{
+        transform: rotateY(180deg);
+               
+    }
+    
+    100%{
+        transform: rotateY(0deg);
+        min-width: 65vw;
          height: 60%;
          border-radius: 16px;
          border: 2px solid white;
-     }
+    }
 }
+    
+
 
 @keyframes cardOpeningDesktop {
     0%{
